css/style.css
:root{
  --main-font: 'Open Sans', sans-serif;
  --blue:rgb(0, 132, 253);
  --card:rgb(181, 221, 255);
  --background-violet:rgb(151, 146, 228);
  --free:rgb(253, 193, 95);
  --icon-blue:rgb(0, 132, 253);
  --footer:rgb(51, 51, 51);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.container {
  max-width: 1140px;
  margin: 0 auto;
}

body{
  font-family:var(--main-font)
}

.debug-box {
  background-color: rgba(255, 0, 0, .2);
  border: 1px solid black;
}
.debug > div {
  border: 1px solid black;
}

.d-flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.align-center {
  align-items: center;
}

.wrap {
  flex-wrap: wrap;
}

ul {
  list-style-type: none;
  color: white;
  }

  .btn {
    padding: 6px 30px;
    margin-top: 20px;
    margin-bottom: 20px;
    background-color: var(--background-violet);
    color: white;
    border-radius: 20px;
  }

  .btn:hover {
    cursor: pointer;
  }
  
  .mini-container{
    margin: 20px;
    text-align: center;
  }
  
  .btn i {
    padding-right: 9px;
  }
  
  
/* header */

header { 
  background-color:var(--blue); 
}


header nav {
  padding: 10px 20px 10px 20px;
}

header a {
  text-decoration: none;
  color: white;
}

.desk-menu {
  display: none;
}

.desk-menu li {
  display: inline-block;
  padding-left: 20px;
}

header .btn {
  background-color: white;
  color: black;
  padding: 5px 10px 5px 10px;
}

/* main */
/* intro section */
.row {
  display: flex;
  flex-direction: column;
}

.intro h4 {
  color: var(--icon-blue);
  padding: 20px 0 20px 0;
  font-size: 1.3rem;
}

.intro p {
  color: rgb(90, 110, 127);
  font-size: 0.8rem;
}

.col {
  width: 100%;
}

.big-card ,.small-card {
  margin: 20px;
  padding: 20px;
  border-radius: 10px;
  justify-content: center;
  background-color: var(--card);
}

.big-card .btn {
  font-size: .8rem;
  background-color: var(--blue);
}

.small-card,.sx {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.small-card i {
  font-size: 4rem;
  color: var(--icon-blue);
}

.small-card p {
  text-align: center;
}

.intro .col img {
  width: 208px;
}

/* planning section */

.planning {
  background-color: var(--background-violet);
  color: white;
}

.planning img {
  max-width: 70%;
}

.planning .card {
  flex-direction: column;
  margin: 20px;
  padding: 20px;
  border-radius: 10px;
  background-color: white;
  color: black;
}

.card img {
  max-width: 100%;
}

/* testimonials section */

.testimonials .mini-container h5 {
  font-weight: 400;
  font-size: 1rem;
  padding: 20px 0 20px 0;
}

.testimonials .mini-container h3 {
  font-size: 1.8rem;
  padding-bottom: 20px;
  color: var(--background-violet);
}

.testimonials .mini-container p {
  padding: 20px;
  font-weight: 400;
}

.testimonials .row .small-card {
  background-color: var(--background-violet);
  color: white;
}


.img-testimonial  {
  width:200px;
  margin-bottom: 20px;
}

.text-testimonial {
  flex-direction: column;
}

.img-testimonial img {
  max-width: 100%;
  object-fit: contain;
  border-radius: 50%;
}


/* benefits */

.benefits {
  background-color: var(--background-violet);
}

.benefits .small-card {
  background-color: white;
  align-items: start;
}

.benefits h3 {
  text-align: center;
  font-size: 1.5rem;
  color: white;
  padding: 30px 0 20px 0;
}

.benefits h4 {
  font-size: 2rem;
  color: var(--background-violet);
  padding-bottom: 20px;
}

.benefits h5 {
  font-size: 1.2rem;
  color: var(--background-violet);
  padding-bottom: 20px;
}

.benefits p {
  font-size: 0.7rem;
  color: gray;
}

/* about section  */
.about-text {
  width: 100%;
}

.about-text .mini-container {
  text-align: left;
}

.about-text .mini-container h2 {
  font-size: 2rem;
  padding: 30px 0 25px 0;
  color: var(--background-violet);
}

.about-text .mini-container p {
  font-size: .8rem;
  padding-bottom: 30px;
}

.about-img {
  width: 100%;
}

.about-img .btn {
  width: 230px;
}


.about-img .mini-container{
  text-align: left;
}

.about-img .mini-container h2{
  color: var(--background-violet);
  padding-top: 10px;
}

.about-img img {
  width: 180px;
  border-radius: 50%;
}

/* get started */

.getstarted {
  background-color: var(--background-violet);
}

.cta {
  flex-direction: column;
  align-items: center;
  width: 100%; 
  color: white;
}

.cta h6 {
  padding-bottom: 40px;
}

.cta h4 {
  text-transform: uppercase;
  color: rgba(255, 255, 255, 0.45);
  font-size: 1rem;
  font-weight: 200;
  padding: 40px 0 25px 0;
}

.cta h3 {
  text-align: center;
  text-transform: capitalize;
  
  font-size: 1.3rem;
}

.cta h2 {
  font-size: 3rem;
  color: var(--free);
  font-weight: 550;
  padding: 25px 0 25px 0;
}

.cta p {
  text-align: center;
}

.cta .btn {
  font-size: .8rem;
  font-weight: 600;
  background-color: white;
  color: var(--background-violet);
  padding: 10px 40px 10px 40px;
}

/* footer */

footer {
  background-color: var(--footer);
}

.footer {
  color: white;
  flex-direction: column;
  align-items: center;
  width: 100%;
  text-align: center;
}

.footer h5 {
  font-weight: 300;
  font-size: .7rem;
  padding-top: 30px;
}

.footer h6 {
  padding: 20px 0 30px 0;
}

 @media screen and (min-width: 768px) { 
  .row {
    flex-direction: row;
  }

  .intro .small-card {
    justify-content: start;
  }
  
  .big-card .sx , .dx {
    width: 100%;
    align-items: start;
  }

  .intro .col {
    width: calc(100% /3);
  }

  .intro .col:first-child {
    width: 66.66%;
  }

  .benefits .col {
    width: 50%;
  }

  .testimonials .small-card {
    flex-direction: row;
    justify-content: start;
  }

  .testimonials .small-card .col {
    justify-content: start;
  }

  .img-testimonial {
    margin-right: 30px;
  }

  .about-text {
    width: 60%;
  }
  
  .about-img {
    width: 40%;
  }

  .getstarted .container,footer .container {
    justify-content: center;
  }

  .cta,.footer {
    width: 50%;
    text-align: center;
  }
}

@media screen and (min-width: 992px) { 

  .burger {
    display: none;
  }

  .desk-menu {
    display: block;
  }
  
  header nav:first-child {
    align-items: center;
  }
  
  .big-card .sx , .dx {
    width: 50%;
  }

  .planning img {
    max-width: 50%;
  }

  .benefits .col {
    width: calc(100% /3 );
  }
}

